# keli-keli

./: .gitignore  LICENSE  README.md  biome.json  package.json  pnpm-lock.yaml  turbo.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yaml  ci.yml  release.yaml  release.yml
desktop/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/src/: App.tsx  Dashboard.tsx  Settings.tsx  api.ts  i18n.tsx  index.css  main.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json  settings.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: commands.rs  config.rs  hook.rs  lib.rs  macos.rs  main.rs  storage.rs  sync.rs  tray.rs  update.rs  ws.rs
desktop/src-tauri/src/hook/: macos.rs  mod.rs  windows.rs
desktop/src/components/ui/: button.tsx  calendar.tsx  input.tsx  popover.tsx  separator.tsx  switch.tsx
desktop/src/lib/: theme.ts
desktop/src/settings/: AppIcon.tsx  charts.tsx  helpers.ts  sections.tsx  ui.tsx
